--- a/app/src/main/res/layout/offer.xml
+++ b/app/src/main/res/layout/offer.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,11 +13,11 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:scaleType="centerInside"
+                android:scaleType="fitXY"
                 android:id="@+id/senitizationimage"
-                android:src="@drawable/hundaiimage"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"/>
+                android:layout_height="230dp"
+                android:src="@drawable/group" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
