--- a/app/src/main/res/layout/activity_city_selection.xml
+++ b/app/src/main/res/layout/activity_city_selection.xml
@@ -19,14 +19,14 @@
         app:navigationIcon="@drawable/navicon2"/>
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#030303">
+            android:background="#534747">
 
 
             <androidx.appcompat.widget.Toolbar
@@ -199,109 +199,88 @@
 
             </LinearLayout>
 
-            <LinearLayout
-
-                android:id="@+id/linear1"
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/nestedscroll"
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/backgroung"
-                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:layout_marginTop="290dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linear">
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="BOOKING STATUS"
-                    android:textColor="#0C0C0C"
-                    android:textSize="20sp" />
                 <LinearLayout
+
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/carimage"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/hundaiimage" />
-
-                    <ImageView
-                    android:id="@+id/carimage2"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/hundaiimage" />
+                    android:orientation="vertical">
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="12dp"
+                        android:background="@drawable/backgroung">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:padding="10dp">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/senitization" />
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="10dp"
+                                android:src="@drawable/senitization" />
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="10dp"
+                                android:src="@drawable/senitization" />
+
+                        </LinearLayout>
+                    </HorizontalScrollView>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/offer_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/backgroung"
+                        tools:listitem="@layout/list_of_guidlines" />
+
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="12dp"
+                        android:background="@drawable/backgroung"
+                        android:padding="12dp">
+
+                        <LinearLayout
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/selfie"
+                            android:orientation="horizontal">
+
+                        </LinearLayout>
+                    </HorizontalScrollView>
+
+
+
+
                 </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
 
-            </LinearLayout>
-            <LinearLayout
-
-                android:id="@+id/linear2"
-                android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/backgroung"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linear1">
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/senitization_recycler"
-                    tools:listitem="@layout/list_of_guidlines"
-                    android:layout_margin="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/linear3"
-                android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/backgroung"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linear2">
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/offer_recycler"
-                    tools:listitem="@layout/offer"
-                    android:layout_margin="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <HorizontalScrollView
-                android:id="@+id/linear4"
-                android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/backgroung"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linear3">
-               <LinearLayout
-                   android:orientation="horizontal"
-                   android:layout_gravity="center_vertical"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content">
-                   <ImageView
-                       android:src="@drawable/selfie"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"/>
-               </LinearLayout>
-            </HorizontalScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </ScrollView>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
