--- a/app/src/main/res/layout/list_of_guidlines.xml
+++ b/app/src/main/res/layout/list_of_guidlines.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="200dp">
     <androidx.cardview.widget.CardView
         android:layout_marginTop="5dp"
         android:layout_marginLeft="8dp"
@@ -21,9 +21,9 @@
             <ImageView
                 android:scaleType="fitXY"
                 android:id="@+id/senitizationimage"
-                android:src="@drawable/senitization"
+                android:src="@drawable/offertooros"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"/>
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
