--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,5 +8,20 @@
     android:layout_height="match_parent"
     tools:context="my.awesome.tooros.SplashActivity">
 
+    <ImageView
+        android:id="@+id/splashbgd"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/splashbg" />
+    <ImageView
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignTop="@+id/splashbgd"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/splashlogo"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"/>
+
+
+</RelativeLayout>
