--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <EditText
+
         android:id="@+id/emailcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
@@ -65,6 +66,8 @@
         app:layout_constraintTop_toBottomOf="@+id/emailcontainer" />
 
     <EditText
+
+        android:inputType="textPassword"
         android:id="@+id/passwordcontainer"
         android:layout_width="334dp"
         android:layout_height="30dp"
