--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,6 +10,10 @@
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_person_login"
             android:title="Login" />
+        <item
+            android:id="@+id/nav_SignUp"
+            android:icon="@drawable/ic_person_login"
+            android:title="SignUp" />
 
         <item
             android:id="@+id/nav_profile"
