--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -313,7 +313,8 @@
 
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/aadharpic"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
@@ -362,7 +363,8 @@
 
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/dlpic"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
