--- a/app/src/main/res/layout/carnooking.xml
+++ b/app/src/main/res/layout/carnooking.xml
@@ -86,10 +86,10 @@
             android:id="@+id/geartype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="52dp"
             android:text="Automatic"
             android:textColor="#97C761"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toBottomOf="@+id/carname" />
 
@@ -120,9 +120,9 @@
             android:id="@+id/imageView7"
             android:layout_width="28dp"
             android:layout_height="29dp"
-            android:layout_marginStart="19dp"
+            android:layout_marginStart="14dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="15dp"
             app:layout_constraintEnd_toStartOf="@+id/baggage"
             app:layout_constraintStart_toEndOf="@+id/totalseat"
             app:layout_constraintTop_toBottomOf="@+id/imageView5"
@@ -132,16 +132,16 @@
             android:id="@+id/baggage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="6dp"
             android:layout_marginTop="21dp"
             android:layout_marginBottom="32dp"
             android:text="3 Baggage"
             android:textColor="#97C761"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView7"
-            app:layout_constraintTop_toBottomOf="@+id/geartype" />
+            app:layout_constraintTop_toBottomOf="@+id/geartype"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -195,22 +195,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-        <TextView
-            android:id="@+id/status"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background=" @drawable/redbutton"
-            android:foregroundGravity="center"
-            android:gravity="center"
-            android:text="BOOK NOW"
-            android:textColor="#fff"
-            android:textSize="25sp"
-            android:textStyle="bold"
+            android:background="@drawable/redbutton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.822"
+            app:layout_constraintHorizontal_bias="0.855"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BOOK NOW"
+                android:paddingTop="5dp"
+                android:paddingBottom="4dp"
+                android:paddingRight="12dp"
+                android:paddingLeft="12dp"
+                android:textColor="#fff"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
