--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -115,6 +115,7 @@
             android:layout_marginEnd="27dp"
             android:layout_marginBottom="229dp"
             android:text="Petrol"
+            android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -143,9 +144,9 @@
             android:id="@+id/textView12"
             android:layout_width="90dp"
             android:layout_height="23dp"
-            android:layout_marginStart="263dp"
+            android:layout_marginStart="261dp"
             android:layout_marginTop="7dp"
-            android:layout_marginEnd="33dp"
+            android:layout_marginEnd="35dp"
             android:layout_marginBottom="134dp"
             android:background="#fff"
 
@@ -198,8 +199,7 @@
             android:layout_height="wrap_content"
 
 
-            android:layout_marginStart="3dp"
-            android:layout_marginEnd="78dp"
+            android:layout_marginEnd="84dp"
             android:layout_marginBottom="165dp"
             android:gravity="center"
             android:text="10 DECEMBER 2020"
@@ -214,8 +214,9 @@
             android:layout_height="wrap_content"
 
             android:layout_marginStart="2dp"
+            android:layout_marginTop="1dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="167dp"
+            android:layout_marginBottom="166dp"
             android:gravity="center"
             android:text="9:00 AM"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -228,8 +229,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="52dp"
-            android:layout_marginEnd="209dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="211dp"
             android:layout_marginBottom="125dp"
             android:text="End Date and Time"
             android:textColor="#fff"
@@ -245,8 +246,8 @@
             android:layout_height="wrap_content"
 
 
-            android:layout_marginStart="52dp"
-            android:layout_marginEnd="214dp"
+            android:layout_marginStart="51dp"
+            android:layout_marginEnd="216dp"
             android:layout_marginBottom="110dp"
             android:gravity="center"
             android:text="10 DECEMBER 2020"
@@ -260,9 +261,9 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="150dp"
+            android:layout_marginEnd="152dp"
             android:layout_marginBottom="111dp"
             android:gravity="center"
             android:text="9:00 AM"
@@ -273,13 +274,13 @@
 
         <ImageView
             android:id="@+id/imageView12"
-            android:layout_width="15dp"
-            android:layout_height="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
 
 
-            android:layout_marginStart="21dp"
+            android:layout_marginStart="27dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="3dp"
+            android:layout_marginEnd="1dp"
             android:layout_marginBottom="110dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/enddate"
@@ -366,9 +367,9 @@
             android:id="@+id/textView23"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="38dp"
+            android:layout_marginStart="26dp"
 
-            android:layout_marginEnd="173dp"
+            android:layout_marginEnd="176dp"
             android:text="COUPON DISCOUNT"
             android:textColor="#fff"
             android:textSize="18sp"
@@ -380,13 +381,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.007" />
 
-        <TextView
+        <EditText
             android:id="@+id/couponcode"
             android:layout_width="208dp"
             android:layout_height="37dp"
-            android:layout_marginStart="38dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="165dp"
+            android:layout_marginEnd="168dp"
             android:background="@drawable/redbutton"
             android:gravity="center_vertical"
             android:hint="Enter Coupon Code"
@@ -400,9 +401,9 @@
             android:id="@+id/apply"
             android:layout_width="124dp"
             android:layout_height="37dp"
-            android:layout_marginStart="25dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="25dp"
             android:background="@drawable/redbutton"
             android:text="APPLY"
             android:textColor="#fff"
@@ -559,13 +560,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+
         <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
             android:layout_marginLeft="29dp"
             android:layout_marginTop="2dp"
-            android:layout_marginRight="80dp"
-            android:background="#fff"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"/>
+            android:layout_marginRight="84dp"
+            android:background="#fff" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -576,26 +578,30 @@
             android:textColor="#fff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
             <LinearLayout
-                android:orientation="horizontal"
-                android:background="@drawable/redbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="190dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            <TextView
-                android:text="₹"
-                android:textColor="#fff"
-                android:paddingLeft="9dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:text="5000"
-                android:id="@+id/totalamount"
-                android:textColor="#fff"
-                android:paddingRight="9dp"
-                android:layout_marginLeft="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_marginTop="4dp"
+                android:background="@drawable/redbutton"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="9dp"
+                    android:text="₹"
+                    android:textColor="#fff" />
+
+                <TextView
+                    android:id="@+id/totalamount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:paddingRight="9dp"
+                    android:text="5000"
+                    android:textColor="#fff" />
             </LinearLayout>
         </LinearLayout>
         <TextView
@@ -627,9 +633,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="Cancellation Policy"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="25dp"
+            android:text="Cancellation Policy"
             android:textColor="#fff"
             android:textSize="16sp" />
 
