--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -186,7 +186,7 @@
             android:layout_marginStart="18dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="209dp"
-            android:layout_marginBottom="168dp"
+            android:layout_marginBottom="170dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView12"
             app:layout_constraintStart_toStartOf="parent"
@@ -203,6 +203,7 @@
             android:layout_marginBottom="165dp"
             android:gravity="center"
             android:text="10 DECEMBER 2020"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView12"
             app:layout_constraintStart_toEndOf="@+id/imageView11"
@@ -213,12 +214,12 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="2dp"
             android:layout_marginTop="1dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginBottom="166dp"
             android:gravity="center"
             android:text="9:00 AM"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView11"
             app:layout_constraintStart_toEndOf="@+id/startdate"
@@ -251,6 +252,7 @@
             android:layout_marginBottom="110dp"
             android:gravity="center"
             android:text="10 DECEMBER 2020"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -261,12 +263,12 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="2dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="152dp"
+            android:layout_marginEnd="164dp"
             android:layout_marginBottom="111dp"
             android:gravity="center"
             android:text="9:00 AM"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/enddate"
@@ -566,7 +568,7 @@
             android:layout_height="5dp"
             android:layout_marginLeft="29dp"
             android:layout_marginTop="2dp"
-            android:layout_marginRight="84dp"
+            android:layout_marginRight="74dp"
             android:background="#fff" />
         <LinearLayout
             android:layout_width="match_parent"
