--- a/app/src/main/res/layout/activity_car_booking.xml
+++ b/app/src/main/res/layout/activity_car_booking.xml
@@ -94,7 +94,7 @@
             android:layout_marginTop="55dp"
             android:background="#fff"
             android:padding="2dp"
-            android:text="9:00 AM"
+            android:text="09:00 AM"
             android:textColor="#000"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -140,7 +140,7 @@
             android:background="#fff"
             android:gravity="center"
             android:padding="2dp"
-            android:text="9:00 AM"
+            android:text="09:00 PM"
             android:textColor="#000"
             android:textSize="10sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -159,11 +159,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/calender" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookingrecycler"
         android:layout_marginTop="15dp"
-
-        tools:listitem="@layout/carnooking"
+        tools:listitem="@layout/carbooking_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
